https://online.sbis.ru/opendoc.html?guid=8e78f43d-dab4-41ac-9bfc-e73c26271b9a

--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -440,6 +440,14 @@
    padding-left: var(--item_padding-horizontal_s_menu);
 }
 
+.controls-Menu__row_levelPadding_xl {
+   padding-left: var(--offset_xl);
+}
+
+.controls-Menu__row_levelPadding_3xl {
+   padding-left: var(--offset_3xl);
+}
+
 .ws-is-hover {
     .controls-Menu__additional:hover {
        .controls-BigSeparator-icon {
