--- a/Controls/_scroll/Scroll/Scrollbar/_Scrollbar.less
+++ b/Controls/_scroll/Scroll/Scrollbar/_Scrollbar.less
@@ -62,13 +62,13 @@
 }
 
 .controls-VScrollbar__thumbWrapper_vertical {
-   min-height: var(--thumb_min-length_scrollbar);
+   min-height: 46px;
 }
 
 .controls-VScrollbar__thumbWrapper_horizontal {
    height: 100%;
    transition: padding 0.3s ease-in-out;
-   min-width: calc(var(--thumb_min-length_scrollbar) + var(--offset_m) * 2);
+   min-width: 70px;
    padding: var(--padding_scrollbar) var(--offset_m);
 }
 
@@ -86,7 +86,7 @@
 }
 
 .controls-VScrollbar__thumb_horizontal {
-   min-width: var(--thumb_min-length_scrollbar);
+   min-width: 46px;
    height: 100%;
 }
 
