https://online.sbis.ru/opendoc.html?guid=08e650be-485d-4a8f-83eb-df7083d030aa

--- a/Controls/_baseList/ListView/_ListView.less
+++ b/Controls/_baseList/ListView/_ListView.less
@@ -850,6 +850,18 @@
          background-color: var(--item_hover_background-color_list);
       }
    }
+
+   .controls-ListView__item_borderOnHover_default:hover {
+      border: 1px solid var(--border-color);
+      // use border-radius option ???
+
+   }
+
+   .controls-ListView__item_shadowOnHover_default {
+      box-shadow: 0 2px 6px 0 rgb(0, 0, 0 / 0.24);
+      // use border-radius option ???
+
+   }
 }
 //TODO это должно уехать в BaseControl после задачи https://online.sbis.ru/opendoc.html?guid=92bedbf7-6038-4c1f-826e-b096b4cddd6d
 .controls-CheckboxMarker_inList {
