https://online.sbis.ru/opendoc.html?guid=40e7e99b-a9f8-41ee-86cb-782740d79807

--- a/Controls-default-theme/variables/_base.less
+++ b/Controls-default-theme/variables/_base.less
@@ -8,6 +8,7 @@
    --unaccented_active_background-color: #edeef2;
    --contrast_background-color: #f3f5f7;
    --hover_background-color: #f3f4f8;
+   --active_background-color: #edeef2;
    --unaccented_color: #999;
    --readonly_color: #ccc;
    --readonly_text-color: #ccc;
