https://online.sbis.ru/opendoc.html?guid=c3d37235-0f61-43a3-93ec-da19ecca7072

--- a/Controls/_filterPanel/View/_View.less
+++ b/Controls/_filterPanel/View/_View.less
@@ -222,6 +222,7 @@
    height: var(--border-thickness);
    margin: 0 var(--offset_xl);
    background: var(--readonly_border-color);
+   margin-top: var(--offset_s);
 }
 
 .controls-FilterPanelPopup__extendedItems-vertical {
