https://online.sbis.ru/opendoc.html?guid=e3de441e-4c3a-41c9-8286-43122cef445c

--- a/Controls/_baseList/ListView/_ListView.less
+++ b/Controls/_baseList/ListView/_ListView.less
@@ -936,7 +936,7 @@
 }
 
 .controls-padding_top-listDefault {
-   padding-top: var(--list-content_air);
+  // padding-top: var(--list-content_air);
 }
 
 .controls-ListView__item_roundBorder_bottomLeft {
