--- a/Controls/_grid/styles/_Grid.less
+++ b/Controls/_grid/styles/_Grid.less
@@ -436,7 +436,7 @@
 // region border
 
 .controls-Grid__row_border_onhover > .controls-Grid__row-cell {
-   border: 1px solid transparent;
+   border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
 }
 .controls-Grid__row_border_onhover > .controls-Grid__row-cell:first-child {
@@ -467,7 +467,7 @@
 .controls-BaseControl_hover_enabled .controls-Grid__row_shadow_onhover:hover > .controls-Grid__row-cell .controls-Grid__row-cell__content {
    background: var(--background-color);
    width: 100%;
-   z-index: 1; // сохранить текущие z-index
+   z-index: 1;
 }
 
 .controls-Grid__row_shadow_visible > .controls-Grid__row-cell:before,
@@ -480,7 +480,7 @@
    left: 0;
    right: 0;
    bottom: 0;
-   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
+   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
    z-index: 0;
 }
 
