https://online.sbis.ru/opendoc.html?guid=08e650be-485d-4a8f-83eb-df7083d030aa

--- a/Controls/_baseList/ListView/_ListView.less
+++ b/Controls/_baseList/ListView/_ListView.less
@@ -853,7 +853,7 @@
 }
 
 .controls-ListView__item_border_onhover {
-   border: 1px solid var(--border-color);
+   border: 1px solid transparent;
 }
 
 .controls-ListView__item_border_visible,
