https://online.sbis.ru/opendoc.html?guid=d7a0b36e-7927-4be6-bcef-2230cfa890d0

--- a/Controls/_popupTemplate/Stack/Template/StackContent/_StackContent.less
+++ b/Controls/_popupTemplate/Stack/Template/StackContent/_StackContent.less
@@ -48,6 +48,6 @@
 // завязаны на видимость DOM-элемента
 .controls-Popup__react-hidden {
    position: absolute;
-   top: -10000px;
-   left: -10000px
+   top: -10000px !important;
+   left: -10000px !important;
 }
