https://online.sbis.ru/opendoc.html?guid=e67d66eb-6801-4efd-876f-645116ca1115

--- a/Controls/_menu/Popup/_Popup.less
+++ b/Controls/_menu/Popup/_Popup.less
@@ -99,6 +99,10 @@
    margin-right: var(--offset_m);
 }
 
+.controls-Menu__popup_header_search_multiSelect {
+   margin-right: var(--apply-button_inline-height_menuPopup);
+}
+
 .controls-Menu__popup_header_search_width_s {
    width: var(--search_width_s_menuPopup);
 }
